--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,12 @@
 [tool.poetry]
 name = "pycounts"
-version = "0.1.0"
+version = "0.1.1"
 description = "Calculate word counts in a text file!"
-authors = ["Jorge Valverde"]
+authors = ["Tomas Beuzen"]
 license = "MIT"
 readme = "README.md"
+include = ["tests/*", "CHANGELOG.md"]
+
 
 [tool.poetry.dependencies]
 python = ">=3.12"
@@ -18,7 +20,13 @@ jupyter = "^1.1.1"
 myst-nb = "^1.2.0"
 sphinx-autoapi = "^3.6.0"
 sphinx-rtd-theme = "^3.0.2"
+python-semantic-release = {version = "^9.21.0", python = "^3.12"}
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.semantic_release]
+version_toml = [
+    "pyproject.toml:tool.poetry.version",
+]
