--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ include = ["tests/*", "CHANGELOG.md"]
 
 [tool.poetry.dependencies]
 python = ">=3.12"
-matplotlib = ">=3.10.0"
+matplotlib = ">=3.11.0"
 
 
 [tool.poetry.group.dev.dependencies]
@@ -29,4 +29,7 @@ build-backend = "poetry.core.masonry.api"
 [tool.semantic_release]
 version_toml = [
     "pyproject.toml:tool.poetry.version",
-]
+]                                                     # version location
+branch = "main"                                       # branch to make releases of
+changelog_file = "CHANGELOG.md"                       # changelog file
+build_command = "pip install poetry && poetry build"  # build dists      
